--- a/styles/articles.css
+++ b/styles/articles.css
@@ -1,33 +1,34 @@
 .mn {
-    margin-top: 100px;
-  }
-  
-  .atc {
-    padding: 20px;
-  }
-  
-  .hd {
-    height: 70px;
-    background-color: silver;
-  }
-  
-  .tt {
-    text-align: center;
-    color: black;
-    font-size: 17px;
-    font-weight: bolder;
-  }
-  
-  .bd {
-    line-height: 35px;
-    text-align: left;
-    background-color: whitesmoke;
-    color: black;
-  }
-  
-  #bg {
-    background-image: url("bg.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
+  margin-top: 100px;
+}
+
+.atc {
+  padding: 20px;
+}
+
+.hd {
+  height: 70px;
+  background-color: silver;
+}
+
+.tt {
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  font-weight: bolder;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.bd {
+  text-align: left;
+  line-height: 35px;
+  font-size: 20px;
+  background-color: whitesmoke;
+  color: black;
+}
+
+#bg {
+  background-image: url("bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
