--- a/styles/style.css
+++ b/styles/style.css
@@ -60,6 +60,7 @@ footer {
   text-align: center;
   font-size: 15px;
   font-family: cursive;
+  font-weigth: bold;
   padding: 30px;
 }
 
@@ -77,7 +78,7 @@ footer {
 .gw {
   font-size: 48px;
   font-weight: bolder;
-  font-family: Impact, "Haettenschweiler", "Arial Narrow Bold", sans-serif;
+  font-family: "Impact", "Haettenschweiler", "Arial Narrow Bold", sans-serif;
   color: rgb(36, 34, 34);
 }
 
