--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,7 @@ footer {
   text-align: center;
   font-size: 15px;
   font-family: cursive;
-  font-weigth: bold;
+  font-weigth: bolder;
   padding: 30px;
 }
 
