--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ h2 {
   color: black;
   line-height: 40px;
   padding: 26px;
-  font-family: "Hoefler Text";
+  font-family: "Verdana", "Geneva", "sans-serif";
 }
 iframe {
   margin-top: 100px;
