--- a/styles/poems.css
+++ b/styles/poems.css
@@ -8,7 +8,7 @@
   font-size: 19px;
   text-align: center;
   line-height: 30px;
-  font-family: Impact, "Haettenschweiler", "Arial Narrow Bold", sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   color: black;
 }
 
@@ -17,3 +17,8 @@
   font-size: 17px;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
+
+.bub {
+  color: black;
+  font-size: 18px;
+  font-family: "URW Chancery L", cursive;
