--- a/styles/poems.css
+++ b/styles/poems.css
@@ -20,5 +20,5 @@
 
 .bub {
   color: black;
-  font-size: 18px;
-  font-family: "URW Chancery L", cursive;
+  font-size: 16px;
+  font-family: 'Snell Roundhand', cursive;
