--- a/styles/poems.css
+++ b/styles/poems.css
@@ -1,6 +1,12 @@
 .mod1,
 .mod2,
-.mod3 {
+.mod3,
+.mod4,
+.mod5,
+.mod6,
+.mod7,
+.mod8,
+.mod9 {
   margin: 50px;
 }
 
@@ -22,3 +28,4 @@
   color: black;
   font-size: 16px;
   font-family: "Snell Roundhand", cursive;
+}
